--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,7 +11,7 @@ decorator==5.1.1
 exceptiongroup==1.2.0
 executing==2.0.1
 Faker==20.1.0
-Flask==3.0.0
+Flask==3.0.2
 Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
@@ -27,9 +27,9 @@ ipdb==0.13.13
 ipython==8.20.0
 itsdangerous==2.1.2
 jedi==0.19.1
-Jinja2==3.1.2
+Jinja2==3.1.3
 Mako==1.3.0
-MarkupSafe==2.1.3
+MarkupSafe==2.1.5
 marshmallow==3.20.2
 marshmallow-sqlalchemy==0.30.0
 matplotlib-inline==0.1.6
@@ -37,6 +37,7 @@ packaging==23.2
 parso==0.8.3
 pexpect==4.9.0
 prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
