--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,7 +7,12 @@ cachelib==0.10.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
 decorator==5.1.1
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 exceptiongroup==1.2.0
 executing==2.0.1
 Faker==20.1.0
@@ -22,36 +27,60 @@ Flask-Session==0.5.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.2
 gunicorn==21.2.0
+gyp==0.1
+httplib2==0.20.2
 idna==3.6
+importlib-metadata==4.6.4
 ipdb==0.13.13
 ipython==8.20.0
 itsdangerous==2.1.2
 jedi==0.19.1
+jeepney==0.7.1
 Jinja2==3.1.3
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 Mako==1.3.0
 MarkupSafe==2.1.5
 marshmallow==3.20.2
 marshmallow-sqlalchemy==0.30.0
 matplotlib-inline==0.1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
 packaging==23.2
 parso==0.8.3
 pexpect==4.9.0
+pillow==10.2.0
 prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu3
 python-dateutil==2.8.2
 pytz==2023.3.post1
+PyYAML==5.4.1
 requests==2.31.0
+SecretStorage==3.3.1
 six==1.16.0
 SQLAlchemy==2.0.23
 SQLAlchemy-serializer==1.4.1
 stack-data==0.6.3
+systemd-python==234
 tomli==2.0.1
 traitlets==5.14.1
 typing_extensions==4.9.0
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 urllib3==2.1.0
+wadllib==1.3.6
 wcwidth==0.2.13
 Werkzeug==3.0.1
 WTForms==3.1.2
+zipp==1.0.0
